# gareth-coaching-api

./: .env.example  .gitignore  ALMANAC-design-language.md  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  PLAN.md  alembic.ini  almanac-DESIGN.md  debug_column_type.py  dev-requirements.txt  docker-compose.yml  dropbox_auth.py  init_db.py  main.py  models.py  pyproject.toml  railway.json  requirements.lock.txt  requirements.txt  ride_data.db  schema.sql
.well-known/: ai-plugin.json  openapi.json  openapi.json.save
alembic/: env.py
api/: effort_extraction.py  routes.py
app/: config.py  database.py  main.py
data/: 2025-04-26-075434-ELEMNT BOLT 5F01-228-0.csv  2025-04-26-075434-ELEMNT BOLT 5F01-228-0.fit  2025-05-01-064707-ELEMNT BOLT 5F01-229-0.csv  2025-05-01-064707-ELEMNT BOLT 5F01-229-0.fit  parsed_full_metrics.csv  ride_history.csv
dropbox_watcher/: requirements.txt
fit_files_local/: 2025-05-02-051436-ELEMNT BOLT 5F01-230-0.fit  2025-05-03-062338-ELEMNT BOLT 5F01-231-0.fit  2025-05-04-070631-ELEMNT BOLT 5F01-233-0.fit  2025-05-05-065940-ELEMNT BOLT 5F01-234-0.fit  2025-05-06-053115-ELEMNT BOLT 5F01-235-0.fit  2025-05-07-044446-ELEMNT BOLT 5F01-236-0.fit  2025-05-08-050755-ELEMNT BOLT 5F01-237-0.fit  2025-05-09-052000-ELEMNT BOLT 5F01-238-0.fit  2025-05-10-060302-ELEMNT BOLT 5F01-239-0.fit  2025-05-11-055223-ELEMNT BOLT 5F01-240-0.fit  2025-05-12-053229-ELEMNT BOLT 5F01-241-0.fit  2025-05-13-045403-ELEMNT BOLT 5F01-242-0.fit  2025-05-14-052945-ELEMNT BOLT 5F01-243-0.fit  2025-05-15-052935-ELEMNT BOLT 5F01-244-0.fit  2025-05-16-051801-ELEMNT BOLT 5F01-245-0.fit  (+1 more)
(+269 files in other folders)
